--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
-  "name": "telegram-song-downloader-bot",
+  "name": "Musicc-song-bot",
   "description": "YouTube Music Downloader Bot for Telegram. ",
 	"stack": "container",
-  "repository": "https://github.com/sanila2007/Telegram-Song-Downloader-Bot",
+  "repository": "https://github.com/Kolgeli/Musicc-Song-Bot",
   "keywords": [
   "python",
   "chatbot",
   "telegrambot"
   ],
-  "website": "https://github.com/sanila2007/Telegram-Song-Downloader-Bot",
-  "success_url": "https://t.me/songdownload597_bot",
+  "website": "https://github.com/Kolgeli/Musicc-Song-Bot",
+  "success_url": "https://t.me/Musiccsongbot",
   "env": {
     "TOKEN": {
       "description": "Take the token of your bot",
